footer issue fixed login tab texts not showing issue fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -62,9 +62,9 @@
   flex-wrap: wrap;
   align-items: center;
   position: absolute;
-  bottom: 30px;
   left: 50%;
   transform: translate(-50%, 0);
+  top: clamp(600px, 80vh, 9999px);
 }
 
 .text-head {
